made it slightly more readable and fixed the validation here too

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,5 +22,5 @@ input {
 }
 
 #output-div {
-  background-color: blueviolet;
+  background-color: rgb(226, 217, 235);
 }
